Testing VirtualBox share dir for git and nbconvert alias

--- a/Lab1-babypython_pk.html
+++ b/Lab1-babypython_pk.html
@@ -12169,7 +12169,7 @@ This can use LateX and</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>(&lt;enumerate at 0x620caa0&gt;, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])</pre>
+<pre>(&lt;enumerate at 0x57abd20&gt;, [(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)])</pre>
 </div>
 
 </div>
@@ -12212,7 +12212,7 @@ This can use LateX and</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;itertools.izip at 0x620aa28&gt;</pre>
+<pre>&lt;itertools.izip at 0x57a97a0&gt;</pre>
 </div>
 
 </div>
@@ -12274,7 +12274,7 @@ This can use LateX and</p>
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>&lt;enumerate object at 0x620ca00&gt;
+<pre>&lt;enumerate object at 0x57abdc0&gt;
 </pre>
 </div>
 </div>
@@ -13195,7 +13195,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[35]:</div>
+<div class="prompt input_prompt">In&nbsp;[37]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">lastword</span><span class="p">[</span><span class="o">-</span><span class="mi">2</span><span class="p">]</span><span class="o">=</span><span class="s2">&quot;k&quot;</span><span class="c1">#cant change a part of a string</span>
@@ -13218,7 +13218,7 @@ ordnance is shot off.]
 <pre>
 <span class="ansi-red-fg">---------------------------------------------------------------------------</span>
 <span class="ansi-red-fg">TypeError</span>                                 Traceback (most recent call last)
-<span class="ansi-green-fg">&lt;ipython-input-35-a2b5f6b81b5d&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-fg">()</span>
+<span class="ansi-green-fg">&lt;ipython-input-37-a2b5f6b81b5d&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-fg">()</span>
 <span class="ansi-green-fg">----&gt; 1</span><span class="ansi-red-fg"> </span>lastword<span class="ansi-blue-fg">[</span><span class="ansi-blue-fg">-</span><span class="ansi-cyan-fg">2</span><span class="ansi-blue-fg">]</span><span class="ansi-blue-fg">=</span><span class="ansi-blue-fg">&#34;k&#34;</span><span class="ansi-red-fg">#cant change a part of a string</span>
 
 <span class="ansi-red-fg">TypeError</span>: &#39;str&#39; object does not support item assignment</pre>
@@ -13231,7 +13231,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[36]:</div>
+<div class="prompt input_prompt">In&nbsp;[38]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">lastword</span><span class="p">[</span><span class="o">-</span><span class="mi">2</span><span class="p">]</span>
@@ -13247,7 +13247,7 @@ ordnance is shot off.]
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[36]:</div>
+<div class="prompt output_prompt">Out[38]:</div>
 
 
 
@@ -13264,7 +13264,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[37]:</div>
+<div class="prompt input_prompt">In&nbsp;[39]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">lastword</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]</span>
@@ -13280,7 +13280,7 @@ ordnance is shot off.]
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[37]:</div>
+<div class="prompt output_prompt">Out[39]:</div>
 
 
 
@@ -13306,7 +13306,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[38]:</div>
+<div class="prompt input_prompt">In&nbsp;[40]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">wierdstring</span><span class="o">=</span><span class="s2">&quot;,&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">hamlettokens</span><span class="p">)</span>
@@ -13323,7 +13323,7 @@ ordnance is shot off.]
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[38]:</div>
+<div class="prompt output_prompt">Out[40]:</div>
 
 
 
@@ -13349,7 +13349,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[39]:</div>
+<div class="prompt input_prompt">In&nbsp;[41]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">square</span><span class="p">(</span><span class="n">x</span><span class="p">):</span>
@@ -13369,7 +13369,7 @@ ordnance is shot off.]
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[39]:</div>
+<div class="prompt output_prompt">Out[41]:</div>
 
 
 
@@ -13386,7 +13386,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[40]:</div>
+<div class="prompt input_prompt">In&nbsp;[42]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">print</span> <span class="n">square</span><span class="p">,</span> <span class="nb">type</span><span class="p">(</span><span class="n">cube</span><span class="p">)</span>
@@ -13406,7 +13406,7 @@ ordnance is shot off.]
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>&lt;function square at 0x31f7f50&gt; &lt;type &#39;function&#39;&gt;
+<pre>&lt;function square at 0x57a8668&gt; &lt;type &#39;function&#39;&gt;
 </pre>
 </div>
 </div>
@@ -13426,7 +13426,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[41]:</div>
+<div class="prompt input_prompt">In&nbsp;[43]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">sum_of_anything</span><span class="p">(</span><span class="n">x</span><span class="p">,</span><span class="n">y</span><span class="p">,</span><span class="n">f</span><span class="p">):</span>
@@ -13449,14 +13449,14 @@ ordnance is shot off.]
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>3 4 &lt;function square at 0x31f7f50&gt;
+<pre>3 4 &lt;function square at 0x57a8668&gt;
 </pre>
 </div>
 </div>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[41]:</div>
+<div class="prompt output_prompt">Out[43]:</div>
 
 
 
@@ -13482,7 +13482,7 @@ ordnance is shot off.]
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[42]:</div>
+<div class="prompt input_prompt">In&nbsp;[44]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">f</span><span class="p">(</span><span class="n">a</span><span class="p">,</span><span class="n">b</span><span class="p">,</span><span class="o">*</span><span class="n">posargs</span><span class="p">,</span><span class="o">**</span><span class="n">dictargs</span><span class="p">):</span>
@@ -13530,7 +13530,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[43]:</div>
+<div class="prompt input_prompt">In&nbsp;[45]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1">#your code here</span>
@@ -13576,7 +13576,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[44]:</div>
+<div class="prompt input_prompt">In&nbsp;[46]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">a</span><span class="o">=</span><span class="p">[</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">]</span>
@@ -13593,7 +13593,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[44]:</div>
+<div class="prompt output_prompt">Out[46]:</div>
 
 
 
@@ -13610,7 +13610,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[45]:</div>
+<div class="prompt input_prompt">In&nbsp;[47]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="mi">6</span> <span class="ow">in</span> <span class="n">a</span>
@@ -13626,7 +13626,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[45]:</div>
+<div class="prompt output_prompt">Out[47]:</div>
 
 
 
@@ -13652,7 +13652,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[46]:</div>
+<div class="prompt input_prompt">In&nbsp;[48]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">do_it</span><span class="p">(</span><span class="n">x</span><span class="p">):</span>
@@ -13690,7 +13690,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[47]:</div>
+<div class="prompt input_prompt">In&nbsp;[49]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">do_it</span><span class="p">(</span><span class="mi">2</span><span class="p">),</span> <span class="n">do_it</span><span class="p">(</span><span class="mi">3</span><span class="p">)</span>
@@ -13718,7 +13718,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[47]:</div>
+<div class="prompt output_prompt">Out[49]:</div>
 
 
 
@@ -13744,7 +13744,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[48]:</div>
+<div class="prompt input_prompt">In&nbsp;[50]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">10</span><span class="p">):</span>
@@ -13793,7 +13793,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[49]:</div>
+<div class="prompt input_prompt">In&nbsp;[51]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">i</span><span class="o">=</span><span class="mi">0</span>
@@ -13868,7 +13868,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>(&lt;type &#39;exceptions.TypeError&#39;&gt;, TypeError(&#39;f() takes at least 2 arguments (1 given)&#39;,), &lt;traceback object at 0x6671050&gt;)
+<pre>(&lt;type &#39;exceptions.TypeError&#39;&gt;, TypeError(&#39;f() takes at least 2 arguments (1 given)&#39;,), &lt;traceback object at 0x57d4758&gt;)
 </pre>
 </div>
 </div>
@@ -14032,7 +14032,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;dictionary-itemiterator at 0x6721208&gt;</pre>
+<pre>&lt;dictionary-itemiterator at 0x57c83c0&gt;</pre>
 </div>
 
 </div>
@@ -14185,7 +14185,7 @@ got 1 3 (4,) {&#39;c&#39;: 2, &#39;d&#39;: 1}
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[59]:</div>
+<div class="prompt input_prompt">In&nbsp;[60]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">topfreq</span><span class="o">=</span><span class="n">L</span><span class="p">[:</span><span class="mi">20</span><span class="p">]</span>
