Going through the lab1 video

--- a/Lab1-pythonpandas_pk.html
+++ b/Lab1-pythonpandas_pk.html
@@ -11892,7 +11892,7 @@ jkl</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># Notebook interprets just typing a variable as a print command</span>
@@ -11925,7 +11925,7 @@ jkl</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[5]:</div>
+<div class="prompt output_prompt">Out[2]:</div>
 
 
 
@@ -11942,7 +11942,7 @@ jkl</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s2">&quot;all.csv&quot;</span><span class="p">,</span> <span class="n">header</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span>
@@ -11965,7 +11965,7 @@ jkl</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[6]:</div>
+<div class="prompt output_prompt">Out[3]:</div>
 
 
 
@@ -12090,7 +12090,7 @@ jkl</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">dtypes</span>
@@ -12106,7 +12106,7 @@ jkl</p>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[9]:</div>
+<div class="prompt output_prompt">Out[4]:</div>
 
 
 
@@ -12142,7 +12142,7 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">shape</span>
@@ -12158,7 +12158,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[10]:</div>
+<div class="prompt output_prompt">Out[5]:</div>
 
 
 
@@ -12184,7 +12184,7 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">df</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
@@ -12200,7 +12200,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[12]:</div>
+<div class="prompt output_prompt">Out[6]:</div>
 
 
 
@@ -12226,7 +12226,7 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[13]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">columns</span>
@@ -12242,7 +12242,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[13]:</div>
+<div class="prompt output_prompt">Out[7]:</div>
 
 
 
@@ -12268,7 +12268,7 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="nb">type</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">columns</span><span class="p">)</span>
@@ -12284,7 +12284,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[14]:</div>
+<div class="prompt output_prompt">Out[8]:</div>
 
 
 
@@ -12301,7 +12301,101 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">rating</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[10]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>0       4.40
+1       4.41
+2       3.56
+3       4.23
+4       4.23
+5       4.25
+6       4.22
+7       4.38
+8       3.79
+9       4.18
+10      4.03
+11      3.72
+12      4.36
+13      4.05
+14      3.72
+15      4.09
+16      3.92
+17      4.58
+18      3.60
+19      4.28
+20      4.02
+21      4.14
+22      4.11
+23      4.20
+24      3.75
+25      3.94
+26      4.43
+27      3.79
+28      4.04
+29      3.94
+        ... 
+5970    3.97
+5971    4.24
+5972    4.19
+5973    4.17
+5974    3.99
+5975    4.07
+5976    4.23
+5977    4.03
+5978    3.99
+5979    2.77
+5980    3.84
+5981    3.36
+5982    4.09
+5983    4.23
+5984    4.02
+5985    3.61
+5986    4.06
+5987    4.26
+5988    4.34
+5989    3.36
+5990    4.12
+5991    4.20
+5992    3.89
+5993    4.09
+5994    4.37
+5995    4.17
+5996    3.99
+5997    3.78
+5998    3.91
+5999    4.35
+Name: rating, Length: 6000, dtype: float64</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="nb">type</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">rating</span><span class="p">),</span> <span class="nb">type</span><span class="p">(</span><span class="n">df</span><span class="p">)</span>
@@ -12317,7 +12411,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[7]:</div>
+<div class="prompt output_prompt">Out[11]:</div>
 
 
 
@@ -12334,7 +12428,7 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="nb">type</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">review_count</span><span class="p">)</span>
@@ -12350,7 +12444,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[8]:</div>
+<div class="prompt output_prompt">Out[13]:</div>
 
 
 
@@ -12376,7 +12470,7 @@ dtype: object</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">rating</span> <span class="o">&lt;</span> <span class="mi">3</span>
@@ -12392,7 +12486,7 @@ dtype: object</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[9]:</div>
+<div class="prompt output_prompt">Out[15]:</div>
 
 
 
@@ -12468,6 +12562,316 @@ Name: rating, Length: 6000, dtype: bool</pre>
 </div>
 
 </div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># Boolean indexing example</span>
+<span class="n">df</span><span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">rating</span> <span class="o">&lt;</span> <span class="mi">3</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[16]:</div>
+
+
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<div>
+<style>
+    .dataframe thead tr:only-child th {
+        text-align: right;
+    }
+
+    .dataframe thead th {
+        text-align: left;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>rating</th>
+      <th>review_count</th>
+      <th>isbn</th>
+      <th>booktype</th>
+      <th>author_url</th>
+      <th>year</th>
+      <th>genre_urls</th>
+      <th>dir</th>
+      <th>rating_count</th>
+      <th>name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>2609</th>
+      <td>2.90</td>
+      <td>8</td>
+      <td>NaN</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/7707820....</td>
+      <td>2013.0</td>
+      <td>/genres/romance|/genres/realistic-fiction|/gen...</td>
+      <td>dir27/19546932-how-to-be-a-perfect-girl.html</td>
+      <td>31</td>
+      <td>How To Be A Perfect Girl</td>
+    </tr>
+    <tr>
+      <th>3738</th>
+      <td>2.00</td>
+      <td>368</td>
+      <td>0983650322</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/9414.Vic...</td>
+      <td>2011.0</td>
+      <td>/genres/young-adult|/genres/science-fiction|/g...</td>
+      <td>dir38/12393909-revealing-eden.html</td>
+      <td>688</td>
+      <td>Revealing Eden (Save the Pearls, #1)</td>
+    </tr>
+    <tr>
+      <th>5844</th>
+      <td>2.97</td>
+      <td>1399</td>
+      <td>0395083621</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/30691.Ad...</td>
+      <td>1925.0</td>
+      <td>/genres/history|/genres/non-fiction|/genres/bi...</td>
+      <td>dir59/54270.Mein_Kampf.html</td>
+      <td>12417</td>
+      <td>Mein Kampf</td>
+    </tr>
+    <tr>
+      <th>5979</th>
+      <td>2.77</td>
+      <td>800</td>
+      <td>0060988649</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/7025.Gre...</td>
+      <td>2001.0</td>
+      <td>/genres/fantasy|/genres/fiction|/genres/myster...</td>
+      <td>dir60/24929.Lost.html</td>
+      <td>11128</td>
+      <td>Lost</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">review_count</span><span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">rating</span> <span class="o">&lt;</span> <span class="mi">3</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[17]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>2609       8
+3738     368
+5844    1399
+5979     800
+Name: review_count, dtype: object</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="n">dfsub1</span><span class="o">=</span><span class="n">df</span><span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">rating</span> <span class="o">&lt;</span> <span class="mi">3</span><span class="p">]</span>
+<span class="n">dfsub1</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[19]:</div>
+
+
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<div>
+<style>
+    .dataframe thead tr:only-child th {
+        text-align: right;
+    }
+
+    .dataframe thead th {
+        text-align: left;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>rating</th>
+      <th>review_count</th>
+      <th>isbn</th>
+      <th>booktype</th>
+      <th>author_url</th>
+      <th>year</th>
+      <th>genre_urls</th>
+      <th>dir</th>
+      <th>rating_count</th>
+      <th>name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>2609</th>
+      <td>2.90</td>
+      <td>8</td>
+      <td>NaN</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/7707820....</td>
+      <td>2013.0</td>
+      <td>/genres/romance|/genres/realistic-fiction|/gen...</td>
+      <td>dir27/19546932-how-to-be-a-perfect-girl.html</td>
+      <td>31</td>
+      <td>How To Be A Perfect Girl</td>
+    </tr>
+    <tr>
+      <th>3738</th>
+      <td>2.00</td>
+      <td>368</td>
+      <td>0983650322</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/9414.Vic...</td>
+      <td>2011.0</td>
+      <td>/genres/young-adult|/genres/science-fiction|/g...</td>
+      <td>dir38/12393909-revealing-eden.html</td>
+      <td>688</td>
+      <td>Revealing Eden (Save the Pearls, #1)</td>
+    </tr>
+    <tr>
+      <th>5844</th>
+      <td>2.97</td>
+      <td>1399</td>
+      <td>0395083621</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/30691.Ad...</td>
+      <td>1925.0</td>
+      <td>/genres/history|/genres/non-fiction|/genres/bi...</td>
+      <td>dir59/54270.Mein_Kampf.html</td>
+      <td>12417</td>
+      <td>Mein Kampf</td>
+    </tr>
+    <tr>
+      <th>5979</th>
+      <td>2.77</td>
+      <td>800</td>
+      <td>0060988649</td>
+      <td>good_reads:book</td>
+      <td>https://www.goodreads.com/author/show/7025.Gre...</td>
+      <td>2001.0</td>
+      <td>/genres/fantasy|/genres/fiction|/genres/myster...</td>
+      <td>dir60/24929.Lost.html</td>
+      <td>11128</td>
+      <td>Lost</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[20]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span></span><span class="n">dfsub1</span><span class="o">.</span><span class="n">review_count</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+<div class="prompt output_prompt">Out[20]:</div>
+
+
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>2609       8
+3738     368
+5844    1399
+5979     800
+Name: review_count, dtype: object</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -12479,7 +12883,7 @@ Name: rating, Length: 6000, dtype: bool</pre>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[21]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">rating</span> <span class="o">&lt;</span> <span class="mi">3</span><span class="p">)</span>
@@ -12495,7 +12899,7 @@ Name: rating, Length: 6000, dtype: bool</pre>
 
 <div class="output_area">
 
-<div class="prompt output_prompt">Out[10]:</div>
+<div class="prompt output_prompt">Out[21]:</div>
 
 
 
@@ -12509,6 +12913,15 @@ Name: rating, Length: 6000, dtype: bool</pre>
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>[PK] 1:17 in lab1 video</p>
+
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
