Followed some lab video

--- a/Lab1-pythonpandas_pk.html
+++ b/Lab1-pythonpandas_pk.html
@@ -12918,7 +12918,7 @@ Name: review_count, dtype: object</pre>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>[PK] 1:17 in lab1 video</p>
+<p>[PK] 1:17 in lab1 video. Continue later</p>
 
 </div>
 </div>
